--- a/Home.xaml
+++ b/Home.xaml
@@ -10,28 +10,106 @@
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="Comic Sans MS"
     FontSize="28"
-    Foreground="White"
+    Foreground="Black"
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="#FF2A71EB">
         <controls:Pivot Title="Cloudsdale">
+            <controls:Pivot.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#FFD0D0D0" Offset="0" />
+                    <GradientStop Color="#FFD0D0D0" Offset="0.075" />
+                    <GradientStop Color="#FF3AA1FB" Offset="0.075" />
+                    <GradientStop Color="#FF1A91DB" Offset="0.10" />
+                    <GradientStop Color="#FF2A81DB" Offset="0.15" />
+                    <GradientStop Color="#FFF0F0F0" Offset="0.15" />
+                    <GradientStop Color="#FFF0F0F0" Offset="1" />
+                </LinearGradientBrush>
+            </controls:Pivot.Background>
             <controls:Pivot.HeaderTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding}" FontFamily="Comic Sans MS" FontSize="48"/>
+                    <Grid>
+                        <TextBlock Text="{Binding}" FontFamily="Comic Sans MS" FontSize="48"/>
+                    </Grid>
                 </DataTemplate>
             </controls:Pivot.HeaderTemplate>
             <controls:PivotItem Header="Home">
-                
-            </controls:PivotItem>
-            <controls:PivotItem Header="Explore">
-                
+
             </controls:PivotItem>
             <controls:PivotItem Header="Clouds">
                 <ScrollViewer>
-                    <ListBox x:Name="CloudList" />
+                    <ItemsControl x:Name="CloudList" />
                 </ScrollViewer>
+            </controls:PivotItem>
+            <controls:PivotItem Header="Explore" Foreground="Black">
+                <Grid>
+                    <Grid Margin="-12,-30" Height="110" VerticalAlignment="Top">
+                        <Grid.Background>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#FFF0F0F0" Offset="1" />
+                                <GradientStop Color="#FFA7A7A7" Offset="0.6" />
+                                <GradientStop Color="#FFA7A7A7" Offset="0" />
+                            </LinearGradientBrush>
+                        </Grid.Background>
+                        <TextBox VerticalAlignment="Top" Margin="0,0,75,0" />
+                        <Button VerticalAlignment="Top" HorizontalAlignment="Right" BorderBrush="Transparent" Margin="0,-9">
+                            <Image Source="/Images/Icons/search.png" Width="50" />
+                            <Button.Style>
+                                <Style TargetType="ButtonBase">
+                                    <Setter Property="Background" Value="Transparent"/>
+                                    <Setter Property="BorderBrush" Value="{StaticResource PhoneForegroundBrush}"/>
+                                    <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
+                                    <Setter Property="BorderThickness" Value="{StaticResource PhoneBorderThickness}"/>
+                                    <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
+                                    <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMediumLarge}"/>
+                                    <Setter Property="Padding" Value="10,3,10,5"/>
+
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="ButtonBase">
+                                                <Grid Background="Transparent">
+                                                    <VisualStateManager.VisualStateGroups>
+                                                        <VisualStateGroup x:Name="CommonStates">
+                                                            <VisualState x:Name="Normal"/>
+                                                            <VisualState x:Name="MouseOver"/>
+                                                            <VisualState x:Name="Disabled"/>
+
+                                                            <!-- the following visual state describes the behaviour you are observing -->
+                                                            <VisualState x:Name="Pressed">
+                                                                <Storyboard>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentContainer" Storyboard.TargetProperty="Projection">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0">
+                                                                            <DiscreteObjectKeyFrame.Value>
+                                                                                <PlaneProjection RotationX="20" RotationY="-20" CenterOfRotationX="-0.1" CenterOfRotationY="-0.1" />
+                                                                            </DiscreteObjectKeyFrame.Value>
+                                                                        </DiscreteObjectKeyFrame>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                </Storyboard>
+                                                            </VisualState>
+                                                        </VisualStateGroup>
+                                                    </VisualStateManager.VisualStateGroups>
+                                                    <Border x:Name="ButtonBackground" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="0" Background="{TemplateBinding Background}" Margin="{StaticResource PhoneTouchTargetOverhang}" >
+                                                        <ContentControl x:Name="ContentContainer" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" Padding="{TemplateBinding Padding}" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}"/>
+                                                    </Border>
+                                                </Grid>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </Button.Style>
+                        </Button>
+                    </Grid>
+                    <ScrollViewer Margin="0,50,0,0">
+                        <StackPanel x:Name="searchResults">
+                            <TextBlock Text="Loading..." />
+                        </StackPanel>
+                    </ScrollViewer>
+                </Grid>
+            </controls:PivotItem>
+            <controls:PivotItem Header="Settings">
+                
             </controls:PivotItem>
         </controls:Pivot>
     </Grid>
