--- a/Home.xaml
+++ b/Home.xaml
@@ -14,20 +14,17 @@
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
+    <phone:PhoneApplicationPage.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="XamlResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </phone:PhoneApplicationPage.Resources>
+
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="#FF2A71EB">
-        <controls:Pivot Title="Cloudsdale">
-            <controls:Pivot.Background>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#FFD0D0D0" Offset="0" />
-                    <GradientStop Color="#FFD0D0D0" Offset="0.075" />
-                    <GradientStop Color="#FF3AA1FB" Offset="0.075" />
-                    <GradientStop Color="#FF1A91DB" Offset="0.10" />
-                    <GradientStop Color="#FF2A81DB" Offset="0.15" />
-                    <GradientStop Color="#FFF0F0F0" Offset="0.15" />
-                    <GradientStop Color="#FFF0F0F0" Offset="1" />
-                </LinearGradientBrush>
-            </controls:Pivot.Background>
+        <controls:Pivot Title="Cloudsdale" Background="{StaticResource PortraitBackground}">
             <controls:Pivot.HeaderTemplate>
                 <DataTemplate>
                     <Grid>
