--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -24,24 +24,22 @@
                     <GradientStop Color="#FF1A61AB" Offset="0.3" />
                 </LinearGradientBrush>
         </Grid.Background>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,0,0,28">
+        <StackPanel x:Name="TitlePanel" Margin="12,0,0,28">
             <TextBlock x:Name="ApplicationTitle" Text="CLOUDSDALE" FontSize="28"/>
             <TextBlock x:Name="PageTitle" Text="Welcome" Margin="9,-7,0,0" FontSize="72"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="ContentPanel" Margin="12,150,12,0">
             <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" Margin="40,150,0,0" />
-            <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,275,0,0" />
-            <Button VerticalAlignment="Bottom" Margin="111,0,111,200" Height="75" Content="Login" Click="LoginClick" />
+            <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,265,0,0" />
             <TextBlock Text="Email" FontSize="48" Margin="0,97,0,444" />
-            <TextBlock Text="Password" FontSize="48" Margin="0,222,0,318" />
+            <TextBlock Text="Password" FontSize="48" Margin="0,212,0,328" />
+            <Button VerticalAlignment="Bottom" Margin="111,0,111,185" Height="75" Content="Login" Click="LoginClick" />
+            <Button VerticalAlignment="Bottom" Margin="2,0,0,120" Height="75" Content="Facebook" Click="FacebookClick" HorizontalAlignment="Left" Width="234" />
+            <Button IsEnabled="False" VerticalAlignment="Bottom" Margin="220,0,2,120" Height="75" Content="Twitter" Click="TwitterClick" />
         </Grid>
     </Grid>
 
