And the Connor said "Let there be Chat (receiving)!", and there was :D

--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -62,5 +62,9 @@
             </controls:PivotItem>
         </controls:Pivot>
     </Grid>
+    
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="False" IsMenuEnabled="False"/>
+    </phone:PhoneApplicationPage.ApplicationBar>
 
 </phone:PhoneApplicationPage>
