--- a/XamlResources.xaml
+++ b/XamlResources.xaml
@@ -19,4 +19,13 @@
         <GradientStop Color="#FFF0F0F0" Offset="0.23" />
         <GradientStop Color="#FFF0F0F0" Offset="1" />
     </LinearGradientBrush>
+    <LinearGradientBrush x:Key="PortraitBackgroundWithMenubar" StartPoint="0,0" EndPoint="0,1">
+        <GradientStop Color="#FFD0D0D0" Offset="0" />
+        <GradientStop Color="#FFD0D0D0" Offset="0.085" />
+        <GradientStop Color="#FF3AA1FB" Offset="0.085" />
+        <GradientStop Color="#FF1A91DB" Offset="0.10" />
+        <GradientStop Color="#FF2A81DB" Offset="0.16" />
+        <GradientStop Color="#FFF0F0F0" Offset="0.16" />
+        <GradientStop Color="#FFF0F0F0" Offset="1" />
+    </LinearGradientBrush>
 </ResourceDictionary>
