--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -39,7 +39,7 @@
                                 <GradientStop Color="#FFC7C7C7" Offset="1" />
                             </LinearGradientBrush>
                         </Grid.Background>
-                        <TextBox VerticalAlignment="Bottom" />
+                        <TextBox VerticalAlignment="Bottom" x:Name="SendBox" KeyDown="SendBoxKeyDown" />
                     </Grid>
                     <ScrollViewer x:Name="ChatScroller" Margin="0,0,0,65">
                         <ItemsControl x:Name="Chats" />
