--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,37 +9,35 @@
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="Comic Sans MS"
     FontSize="28"
-    Foreground="White"
+    Foreground="#FF404040"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot">
         <Grid.Background>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#FF909090" Offset="0" />
-                    <GradientStop Color="#FF404040" Offset="0.055" />
-                    <GradientStop Color="#FF2A91EB" Offset="0.055" />
-                    <GradientStop Color="#FF0A81CB" Offset="0.1" />
-                    <GradientStop Color="#FF1A61AB" Offset="0.3" />
-                </LinearGradientBrush>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="#FF3AA1FB" Offset="0.0" />
+                <GradientStop Color="#FF1A91DB" Offset="0.15" />
+                <GradientStop Color="#FFF1F1F1" Offset="0.4" />
+                <GradientStop Color="#FFC9C9C9" Offset="1.0" />
+            </LinearGradientBrush>
         </Grid.Background>
+        <Image VerticalAlignment="Top" Margin="0,20" Height="100" Source="/Images/cloudsdale-thin-bright-logo.png" />
 
-        <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Margin="12,0,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="CLOUDSDALE" FontSize="28"/>
-            <TextBlock x:Name="PageTitle" Text="Welcome" Margin="9,-7,0,0" FontSize="72"/>
-        </StackPanel>
-
-        <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Margin="12,150,12,0">
-            <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" Margin="40,150,0,0" />
-            <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,265,0,0" />
-            <TextBlock Text="Email" FontSize="48" Margin="0,97,0,444" />
-            <TextBlock Text="Password" FontSize="48" Margin="0,212,0,328" />
-            <Button x:Name="emailbtn" VerticalAlignment="Bottom" Margin="111,0,111,185" Height="75" Content="Login" Click="LoginClick" />
-            <Button x:Name="fbbtn" VerticalAlignment="Bottom" Margin="2,0,0,120" Height="75" Content="Facebook" Click="FacebookClick" HorizontalAlignment="Left" Width="234" />
-            <Button x:Name="twitterbtn" IsEnabled="False" VerticalAlignment="Bottom" Margin="220,0,2,120" Height="75" Content="Twitter" Click="TwitterClick" />
+            <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" Margin="40,145,0,0" />
+            <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,235,0,0" />
+            <TextBlock Text="Email" FontSize="36" Margin="0,105,0,0" Height="50" 
+                       VerticalAlignment="Top" />
+            <TextBlock Text="Password" FontSize="36" Margin="0,200,0,0" Height="50" 
+                       VerticalAlignment="Top" />
+            <Button x:Name="emailbtn" VerticalAlignment="Bottom" Margin="111,0,111,185" 
+                    Height="75" Content="Login" Click="LoginClick" />
+            <Button x:Name="fbbtn" VerticalAlignment="Bottom" Margin="2,0,0,120" Height="75" 
+                    Content="Facebook" Click="FacebookClick" HorizontalAlignment="Left" 
+                    Width="234" />
+            <Button x:Name="twitterbtn" IsEnabled="False" VerticalAlignment="Bottom" 
+                    Margin="220,0,2,120" Height="75" Content="Twitter" Click="TwitterClick" />
         </Grid>
     </Grid>
 
