--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -22,22 +22,32 @@
                 <GradientStop Color="#FFC9C9C9" Offset="1.0" />
             </LinearGradientBrush>
         </Grid.Background>
-        <Image VerticalAlignment="Top" Margin="0,20" Height="100" Source="/Images/cloudsdale-thin-bright-logo.png" />
+        <Grid VerticalAlignment="Top">
+            <Image VerticalAlignment="Top" Margin="0,20" Height="100" Source="/Images/cloudsdale-thin-bright-logo.png" />
+            
+        </Grid>
 
         <Grid x:Name="ContentPanel" Margin="12,150,12,0">
-            <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" Margin="40,145,0,0" />
+            <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" 
+                     Margin="40,145,0,0" />
+            <CheckBox VerticalAlignment="Top" HorizontalAlignment="Center" 
+                      Margin="0,300,0,0" Content="Remember Password"
+                      Foreground="#FF555555" FontFamily="Comic Sans MS"
+                      FontSize="24" x:Name="rempass"/>
             <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,235,0,0" />
             <TextBlock Text="Email" FontSize="36" Margin="0,105,0,0" Height="50" 
                        VerticalAlignment="Top" />
             <TextBlock Text="Password" FontSize="36" Margin="0,200,0,0" Height="50" 
                        VerticalAlignment="Top" />
             <Button x:Name="emailbtn" VerticalAlignment="Bottom" Margin="111,0,111,185" 
-                    Height="75" Content="Login" Click="LoginClick" />
+                    Height="75" Content="Login" Click="LoginClick"
+                    Foreground="#FF555555" BorderBrush="#FF555555"  />
             <Button x:Name="fbbtn" VerticalAlignment="Bottom" Margin="2,0,0,120" Height="75" 
                     Content="Facebook" Click="FacebookClick" HorizontalAlignment="Left" 
-                    Width="234" />
+                    Width="234" Foreground="#FF555555" BorderBrush="#FF555555" />
             <Button x:Name="twitterbtn" IsEnabled="False" VerticalAlignment="Bottom" 
-                    Margin="220,0,2,120" Height="75" Content="Twitter" Click="TwitterClick" />
+                    Margin="220,0,2,120" Height="75" Content="Twitter" Click="TwitterClick"
+                     Foreground="#FF555555" BorderBrush="#FF555555"/>
         </Grid>
     </Grid>
 
