--- a/XamlResources.xaml
+++ b/XamlResources.xaml
@@ -3,29 +3,45 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <LinearGradientBrush x:Key="PortraitBackground" StartPoint="0,0" EndPoint="0,1">
         <GradientStop Color="#FFD0D0D0" Offset="0" />
-        <GradientStop Color="#FFD0D0D0" Offset="0.075" />
-        <GradientStop Color="#FF3AA1FB" Offset="0.075" />
+        <GradientStop Color="#FFD0D0D0" Offset="0.06" />
+        <GradientStop Color="#FF3AA1FB" Offset="0.06" />
         <GradientStop Color="#FF1A91DB" Offset="0.10" />
-        <GradientStop Color="#FF2A81DB" Offset="0.15" />
-        <GradientStop Color="#FFF0F0F0" Offset="0.15" />
+        <GradientStop Color="#FF2A81DB" Offset="0.13" />
+        <GradientStop Color="#FFF0F0F0" Offset="0.13" />
         <GradientStop Color="#FFF0F0F0" Offset="1" />
     </LinearGradientBrush>
     <LinearGradientBrush x:Key="LandscapeBackground" StartPoint="0,0" EndPoint="0,1">
         <GradientStop Color="#FFD0D0D0" Offset="0" />
-        <GradientStop Color="#FFD0D0D0" Offset="0.12" />
-        <GradientStop Color="#FF3AA1FB" Offset="0.12" />
-        <GradientStop Color="#FF1A91DB" Offset="0.18" />
-        <GradientStop Color="#FF2A81DB" Offset="0.23" />
-        <GradientStop Color="#FFF0F0F0" Offset="0.23" />
+        <GradientStop Color="#FFD0D0D0" Offset="0.10" />
+        <GradientStop Color="#FF3AA1FB" Offset="0.10" />
+        <GradientStop Color="#FF1A91DB" Offset="0.15" />
+        <GradientStop Color="#FF2A81DB" Offset="0.21" />
+        <GradientStop Color="#FFF0F0F0" Offset="0.21" />
         <GradientStop Color="#FFF0F0F0" Offset="1" />
     </LinearGradientBrush>
-    <LinearGradientBrush x:Key="PortraitBackgroundWithMenubar" StartPoint="0,0" EndPoint="0,1">
-        <GradientStop Color="#FFD0D0D0" Offset="0" />
-        <GradientStop Color="#FFD0D0D0" Offset="0.085" />
-        <GradientStop Color="#FF3AA1FB" Offset="0.085" />
-        <GradientStop Color="#FF1A91DB" Offset="0.10" />
-        <GradientStop Color="#FF2A81DB" Offset="0.16" />
-        <GradientStop Color="#FFF0F0F0" Offset="0.16" />
-        <GradientStop Color="#FFF0F0F0" Offset="1" />
-    </LinearGradientBrush>
+    <DataTemplate x:Key="ChatMessageLineTemplate">
+        <TextBlock DataContext="{Binding}" Text="{Binding Path=Text}" Foreground="{Binding Path=Color}" FontSize="16" 
+                   TextWrapping="Wrap" FontFamily="Verdana"/>
+    </DataTemplate>
+    <DataTemplate x:Key="ChatMessageTemplate">
+        <Grid>
+            <Image DataContext="{Binding Path=user.avatar}" Source="{Binding Path=Chat}" 
+                   HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" Height="50"/>
+            <StackPanel Orientation="Horizontal" Margin="60,0">
+                <TextBlock DataContext="{Binding Path=user}" Text="{Binding Path=name}" FontSize="18" Foreground="#FF5F8FCF"/>
+                <TextBlock DataContext="{Binding Path=user}" Text="{Binding Path=RoleTag}"
+                           Foreground="{Binding Path=RoleBrush}" FontSize="12" Margin="5,3"/>
+            </StackPanel>
+            <TextBlock DataContext="{Binding}"
+                       Text="{Binding Path=timestamp, StringFormat=t}" HorizontalAlignment="Right" 
+                       VerticalAlignment="Top" FontSize="16" Foreground="#ff6f8f8f"/>
+            <ItemsControl DataContext="{Binding}" ItemsSource="{Binding Path=Split}" Margin="60,20,0,0"
+                          ItemTemplate="{StaticResource ChatMessageLineTemplate}"/>
+        </Grid>
+    </DataTemplate>
+    <DataTemplate x:Key="DropsModel">
+        <Grid>
+            <Image DataContext="{Binding}" Source="{Binding Path=preview}" />
+        </Grid>
+    </DataTemplate>
 </ResourceDictionary>
